Added --add-modules as a workaround for javax.xml.bind classes missing in jdk9. Added parameter to pass arguments to run.sh script